--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "json-server": "^0.17.0"
+  },
+  "scripts": {
+    "backend": "json-server --watch db.json --port 5000"
   }
 }
